A quick proof of conept of a full text index search with Whoosh.
On a directory with 28 MB, 370k lines, 808 files of IRC logs, creating
the index takes 6 min 32 s (time bin/python src/irclog2html/testindex.py)
and produces an index of 200 MB.

Querying with `bin/python testsearch.py` takes ~0.17 s, the index
itself reports a query execution time of 0.00088 s.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -6,6 +6,7 @@ parts = irclog2html test
 recipe = zc.recipe.egg
 eggs = irclog2html
        tox
+interpreter = python
 
 [test]
 recipe = zc.recipe.testrunner
